Add common starlark builtins to copybara reference
Starlark is evolving and many users are unfamiliar with the
config language. Add the common types to the copybara reference.

The bazel parts don't quite meet the formatting and have a few
link bugs. However, that should be acceptable.

PiperOrigin-RevId: 721099434
Change-Id: I736d2fd8cae767f45149b42c17d6e5c01fdd7341